// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Platform No platform provided 1`] = `
<span
  class=""
/>
`;

exports[`Platform scheduled !== real & cancelled 1`] = `
<span
  class="Platform-cancelled-0 Platform-changed-0"
>
  1
</span>
`;

exports[`Platform scheduled !== real 1`] = `
<span
  class="Platform-changed-0"
>
  1
</span>
`;

exports[`Platform scheduled === real & cancelled 1`] = `
<span
  class="Platform-cancelled-0"
>
  1
</span>
`;

exports[`Platform scheduled === real 1`] = `
<span
  class=""
>
  1
</span>
`;
